# MTX-LLM-Persona-Study

./: .env.example  .gitignore  README.md  changes.md  pyproject.toml  requirements.txt
llmsonas/: __init__.py  cases.py  config.py  harness.py
llmsonas/construction/: __init__.py  exposure.py  profile.py  segment.py  select.py
llmsonas/data/: __init__.py  dump.py  ingest.py
llmsonas/features/: __init__.py  build.py
llmsonas/graph/: __init__.py  build.py  contagion.py  fj.py  nullcheck.py
llmsonas/scoring/: __init__.py  metrics.py
llmsonas/survey/: __init__.py  prompt.py  together_client.py
scripts/: counterfactual_menu.py  e1_label_controls.py  e2_frequency.py  e3_crossmodel_probe.py  e4_cross_case_calibration.py  e6_loa_scaffold.py  make_figures.py  make_stakeholder_figures.py  probe_reasoning.py  q2_keep_playing.py  smoke_test.py  smoke_test_ark.py  smoke_test_contagion.py  smoke_test_csgo.py  smoke_test_elite.py  smoke_test_hd2.py  smoke_test_historical.py  smoke_test_nms.py  smoke_test_payday2.py  smoke_test_runescape.py  smoke_test_tekken8.py  smoke_test_totalwar3.py  smoke_test_warthunder.py
tests/: test_exposure.py  test_readout.py  test_segment.py
